# LearningWithRevision

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  resnet.py
.github/workflows/: ci.yml
resnet_pretrained/: main.py  model.py  pretrained.py  time_plot.py  utils.py
resnet_training/: baseline.py  data.py  main.py  model.py  model_zoo.py  selective_gradient.py  test.py  time_plot.py  utils.py
training_models/: baseline.py  data.py  main.py  model_zoo.py  readme.md  selective_gradient.py  utils.py
training_models/noisy_data/: datasets.py
