[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdd"
version = "0.0.1"
description = "Progressive Data Dropout reference code"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
